--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "json-server": "^1.0.0-beta.3",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   },
